--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -229,6 +229,7 @@
 \NewDocumentCommand{\Lim}{m m}{\lim\limits_{#1 \rightarrow #2}}
 \NewDocumentCommand{\Exp}{m}{e^{#1}}
 \NewDocumentCommand{\LogTen}{}{\log_{10}}
+\NewDocumentCommand{\Must}{m}{\stackrel{!}{#1}}
 \NewDocumentCommand{\MustEqual}{}{\stackrel{!}{=}}
 \NewDocumentCommand{\DefEqual}{}{\stackrel{\mathrm{def}}{=}}
 \NewDocumentCommand{\Implies}{}{\quad\Rightarrow\quad}
