Improved style enforcer

--- a/core/tex/dgs.cls
+++ b/core/tex/dgs.cls
@@ -45,6 +45,7 @@
 \RequirePackage{graphicx}
 \RequirePackage{etoolbox}
 \RequirePackage{cancel}
+\RequirePackage{multicol}
 \RequirePackage{fancyhdr}
 \RequirePackage{hyphenat}
 \RequirePackage{nicefrac}
