New check digits for Náboj

--- a/modules/naboj/templates/envelope.tex
+++ b/modules/naboj/templates/envelope.tex
@@ -11,7 +11,7 @@
     (@ for team in venue.teams @)
         \vspace*{10mm}
         \fontsize{120}{0}\selectfont
-        (* '%03d'|format(team.id) *)
+        (* team.id *)
 
         \vspace{10mm}
         \fontsize{15}{0}\selectfont
