--- a/modules/seminar/templates/base-booklets.tex
+++ b/modules/seminar/templates/base-booklets.tex
@@ -38,9 +38,8 @@
         \subsection{%
             \texorpdfstring{%
                 \large \textbf{(* problem.title *)} \hfill \normalsize%
-                (@ block heading_inner scoped @)(@ endblock heading_inner @)
-            }{(* round.number *).(* problem.number *) (* problem.title *)}%
-            \label{(* volume.id *)(* semester.id *)(* round.id *)(* problem.id *)}
+                (@ block heading_inner scoped @)(@ endblock heading_inner @)}{(* round.number *).(* problem.number *) (* problem.title *)}%
+            \label{(* volume.id *)(* semester.id *)(* round.id *)(* problem.id *)}%
         }
 
         (@ block problem_again @)(@ endblock @)
