--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -217,7 +217,7 @@
 \NewDocumentCommand{\Eval}{m m O{}}{\left.#1\right|_{#2}^{#3}}
 \NewDocumentCommand{\EvalP}{m m O{}}{\left(#1\right)_{#2}^{#3}}
 \NewDocumentCommand{\ExpectedChevrons}{m}{\left<#1\right>}
-\NewDocumentCommand{\ExpectedE}{m}{\mathbb{E}\left[#1\right]}
+\NewDocumentCommand{\ExpectedE}{m}{\mathrm{E}\left[#1\right]}
 \NewDocumentCommand{\Mean}{m}{\overline{#1}}
 
 \NewDocumentCommand{\QText}{m}{\quad\text{#1}\quad}
