Tearoff with variable count per page

--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -217,6 +217,7 @@
 
 \NewDocumentCommand{\Eval}{m m O{}}{\left.#1\right|_{#2}^{#3}}
 \NewDocumentCommand{\EvalP}{m m O{}}{\left(#1\right)_{#2}^{#3}}
+\NewDocumentCommand{\EvalB}{m m O{}}{\left[#1\right]_{#2}^{#3}}
 \NewDocumentCommand{\ExpectedChevrons}{m}{\left<#1\right>}
 \NewDocumentCommand{\ExpectedE}{m}{\mathrm{E}\left[#1\right]}
 \NewDocumentCommand{\Mean}{m}{\overline{#1}}
