--- a/modules/naboj/templates/tearoff-bottom.tex
+++ b/modules/naboj/templates/tearoff-bottom.tex
@@ -6,7 +6,7 @@
 
 (@ block main @)
     \centering
-    \vspace*{37mm}
+    \vspace*{(* competition.tearoff.bottomsep *)mm}
     \LARGE
     \textit{(* i18n.get(team.language).tearoff.bottom *)}
 (@ endblock main @)
