--- a/modules/naboj/templates/tearoff-problem.tex
+++ b/modules/naboj/templates/tearoff-problem.tex
@@ -1,14 +1,13 @@
 \setcounter{volume}{(* volume.number *)}%
 \setcounter{problem}{(@ block probnum @)(* problem.number *)(@ endblock probnum @)}%
-%\setcounter{team}{(* team.id *)}%
 
 (@ block activate @)
     \input{core/i18n/(* team.language *)/override.tex}
     \setActive{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* team.language *)/(* problem.id *)}%
 (@ endblock activate @)
 
-\begin{minipage}[t][94mm][t]{\textwidth}%
-    \begin{minipage}[t][88mm][t]{0.85\linewidth}%
+\begin{minipage}[t][(* competition.tearoff.height *)mm][t]{\textwidth}%
+    \begin{minipage}[t][(* competition.tearoff.inner *)mm][t]{0.85\linewidth}%
         (@ block main @)
             \vspace{0pt}%
             \subsection{\texorpdfstring{(* problem.number *)}{(* problem.number *). (* problem.id *)}}%
@@ -16,11 +15,11 @@
             \protectedInput{\activeDirectory/problem.tex}%
         (@ endblock main @)
     \end{minipage}%
-    \begin{minipage}[t][88mm][t]{0.149\linewidth}
+    \begin{minipage}[t][(* competition.tearoff.inner *)mm][t]{0.149\linewidth}
         \vspace{0mm}%
         \hspace{4mm}%
         \rotatebox{90}{%
-            \hspace{15mm}%
+            \hspace{(* competition.tearoff.team_space *)mm}%
             \textsf{%
                 \fontsize{28}{0}\selectfont (* team.id *)%
                 \fontsize{20}{0}\selectfont(@ block probnum2 @)(* '%02d'|format(problem.number) *)(@ endblock probnum2 @)%
@@ -29,14 +28,14 @@
         }%
         \hspace{2pt}
         \rotatebox{90}{%
-            \hspace{6mm}
+            \hspace{(* competition.tearoff.barcode_space *)mm}
             \includegraphics[%
                 width=76mm, height=14mm,
                 keepaspectratio=false,
                 page=(@ block page @)(* team.number * (volume.problems|length + 1) + problem.number *)(@ endblock page @)]{%
                 \rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/venues/(* venue.id *)/barcodes.pdf%
             }%
-            \hspace{6mm}
+            \hspace{(* competition.tearoff.barcode_space *)mm}
         }%
     \end{minipage}
 
