--- a/modules/seminar/templates/instagram.tex
+++ b/modules/seminar/templates/instagram.tex
@@ -63,7 +63,8 @@
             \texorpdfstring{%
                 \large \textbf{(* problem.title *)} \hfill \normalsize%
                 (@ if problem.pointsDescription @)%
-                    \textbf{(* problem.pointsDescription *) bod(* '%s'|format(plural(problem.pointsDescription,"","y","ov")) *)}, %
+                    \textbf{(* problem.pointsDescription *) bod(* '%s'|format(plural(problem.pointsDescription,"","y","ov")) *)}%
+                    (@ if problem.categories @), (@ endif @)%
                 (@ endif @)%
                 (@ if problem.categories @)%
                     kategóri(@ if problem.categories|length == 1 @)a(@ else @)e(@ endif @) (* problem.categories|format_list *)%
