--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -38,3 +38,6 @@
 \DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_\Earth}}
 \DeclareSIUnit{\atomicmass}{u}
 \DeclareSIUnit{\lightyear}{ly}
+\DeclareSIUnit{\atmosphere}{atm}
+\DeclareSIUnit{\ppm}{ppm}
+\DeclareSIUnit{\ppb}{ppb}
