Switched to language codes

--- a/modules/naboj/templates/tearoff-problem.tex
+++ b/modules/naboj/templates/tearoff-problem.tex
@@ -1,5 +1,8 @@
 \setcounter{volume}{(* volume.number *)}%
 \setcounter{problem}{(@ block probnum @)(* problem.number *)(@ endblock probnum @)}%
+\setcounter{equation}{0}%
+\setcounter{table}{0}%
+\setcounter{figure}{0}%
 
 (@ block activate @)
     \input{core/i18n/(* team.language *)/override.tex}
