--- a/modules/naboj/templates/answers-modulo.tex
+++ b/modules/naboj/templates/answers-modulo.tex
@@ -8,7 +8,7 @@
 
     \section{(* i18n.section.answers *)}
     \pagestyle{answers}
-    (@ for modulo in volume.problems_mod_5 @)
+    (@ for modulo in volume.problems_modulo @)
         \newpage%
         \section{(* i18n.section.modulo *) (* loop.index0 *)}
         (@ for problem in modulo @)%
