--- a/modules/naboj/templates/base-languages.tex
+++ b/modules/naboj/templates/base-languages.tex
@@ -91,8 +91,7 @@
                 \vspace{4pt}
                 {\Large (* volume.number*). (* i18n.competition.name.nominative *)}\\[4pt]
                 {\large (* volume.date.strftime('%d. %m. %Y') *)}\\[8pt]
-                {\footnotesize (* competition.organisation.name.short *), (* competition.organisation.department.short *) %
-                    (* competition.organisation.faculty.short *), (* competition.organisation.address *)}\\[2pt]
+                {\footnotesize (* competition.organisation.name *), (* competition.organisation.address *)}\\[2pt]
                 \vspace{6pt}
             \end{minipage}
         }
