Better texorpdfstring in tearoff

--- a/modules/naboj/templates/tearoff-problem.tex
+++ b/modules/naboj/templates/tearoff-problem.tex
@@ -13,7 +13,7 @@
     \begin{minipage}[t][(* competition.tearoff.inner *)mm][t]{0.85\linewidth}%
         (@ block main @)
             \vspace{0pt}%
-            \subsection{\texorpdfstring{(* problem.number *)}{(* problem.number *). (* problem.id *)}}%
+            \subsection{\texorpdfstring{(* problem.number *)}{(* team.id *) (* problem.number *). (* problem.id *)}}%
             \setlength{\parskip}{6pt}
             \protectedInput{\activeDirectory/problem.tex}%
         (@ endblock main @)
