--- a/modules/naboj/templates/envelopes.tex
+++ b/modules/naboj/templates/envelopes.tex
@@ -9,17 +9,19 @@
     \centering
 
     (@ for team in venue.teams @)
-        \vspace*{10mm}
-        \fontsize{80}{0}\selectfont%
+        \includegraphics[keepaspectratio=true, height=70mm]{input/(* module.id *)/(* competition.id *)/.static/logo/logo.pdf}%
+        \vspace*{5mm}
+
+        \fontsize{60}{0}\selectfont%
         (* team.id[:4] *)%
-        \fontsize{120}{0}\selectfont%
+        \fontsize{80}{0}\selectfont%
         (* team.id[4:] *)%
 
-        \vspace{10mm}
+        \vspace{5mm}
         \fontsize{15}{0}\selectfont
         (* team.name *)
 
-        \vspace{30mm}
+        \vspace{15mm}
         \normalsize
         (* i18n.get(team.language).envelope.donotopen *)
         \newpage
