--- a/modules/naboj/templates/base-languages.tex
+++ b/modules/naboj/templates/base-languages.tex
@@ -30,7 +30,7 @@
     \fancypagestyle{main}{%
         \fancyhead[LO,RE]{%
             \raisebox{(* competition.hacks.smallLogoRaise *)}{%
-                \includegraphics[keepaspectratio=true, height=6mm]{input/(* module.id *)/(* competition.id *)/.static/logo/logo.pdf}%
+                \includegraphics[keepaspectratio=true, height=6mm]{build/(* module.id *)/(* competition.id *)/.static/logo/logo.pdf}%
             }%
         }%
         \fancyhead[C]{\textit{(* volume.number *). (* i18n.competition.name.nominative *), (* volume.number + competition.founded - 1 *)}}
@@ -98,7 +98,7 @@
         \fancyhead[R]{
             \begin{minipage}{0.2\textwidth}
                 \flushright
-                \includegraphics[width=30mm, keepaspectratio=true]{input/(* module.id *)/(* competition.id *)/.static/logo/logo.pdf}\\[0pt]
+                \includegraphics[width=30mm, keepaspectratio=true]{build/(* module.id *)/(* competition.id *)/.static/logo/logo.pdf}\\[0pt]
                 \vspace{4pt}
             \end{minipage}
         }
