--- a/modules/naboj/templates/booklet.tex
+++ b/modules/naboj/templates/booklet.tex
@@ -9,7 +9,7 @@
         \thispagestyle{first}
         \loadgeometry{firstpage}
         \afterpage{\aftergroup\restoregeometry}
-        \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/intro.tex}
+        \input{build/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/intro.tex}
         \newpage
     (@ endif @)
 
