--- a/modules/naboj/templates/envelopes.tex
+++ b/modules/naboj/templates/envelopes.tex
@@ -9,7 +9,7 @@
     \centering
 
     (@ for team in venue.teams @)
-        \includegraphics[keepaspectratio=true, height=70mm]{input/(* module.id *)/(* competition.id *)/.static/logo/logo.pdf}%
+        \includegraphics[keepaspectratio=true, height=70mm]{build/(* module.id *)/(* competition.id *)/.static/logo/logo.pdf}%
         \vspace*{5mm}
 
         \fontsize{60}{0}\selectfont%
