--- a/modules/naboj/templates/instructions-online.tex
+++ b/modules/naboj/templates/instructions-online.tex
@@ -7,7 +7,7 @@
     (@ if language.rtl @)
         \arabicfont\setRL
     (@ endif @)
-    \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/instructions-online-inner.tex}
+    \input{build/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/instructions-online-inner.tex}
     (@ if language.rtl @)
         \unsetRL
     (@ endif @)
