--- a/modules/naboj/templates/instructions.tex
+++ b/modules/naboj/templates/instructions.tex
@@ -3,5 +3,5 @@
 (@ block content @)
     \pagestyle{instructions}
     \section{(* i18n.instructions.title *)}
-    \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/instructions-inner.tex}
+    \input{build/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/instructions-inner.tex}
 (@ endblock @)
