Reintroduced .static to seminar

--- a/core/tex/dgs.cls
+++ b/core/tex/dgs.cls
@@ -122,6 +122,7 @@
 \setlist[itemize]{
     topsep          =       0mm,
     itemsep         =       0mm,
+    leftmargin      =       8mm,
 }
 
 % Setup figure caption format and width
