--- a/modules/seminar/templates/base.tex
+++ b/modules/seminar/templates/base.tex
@@ -90,6 +90,7 @@
 
 % Include overrides specific to this seminar instance from its static file (in the repository)
 \input{core/i18n/(* competition.language *)/override.tex}
+\input{build/(* module.id *)/(* competition.id *)/.static/format-override.tex}
 
 (@ block specific @)(@ endblock @)
 
