Fixed static overrides in seminar and added physics package

--- a/core/tex/dgs.cls
+++ b/core/tex/dgs.cls
@@ -52,6 +52,7 @@
 \RequirePackage{pifont}
 \RequirePackage{chngcntr}
 \RequirePackage{mathtools}
+\RequirePackage{physics}
 \RequirePackage{ulem}
 \RequirePackage[weather]{ifsym}
 \RequirePackage{nth}
