Added paragraph formatting

--- a/modules/seminar/templates/base.tex
+++ b/modules/seminar/templates/base.tex
@@ -28,9 +28,11 @@
     \titleformat{\section}[hang]{\centering\LARGE}{}{0pt}{}
     \titleformat{\subsection}[hang]{\large}{\bfseries\arabic{round}.\arabic{problem}}{6pt}{}[]
     \titleformat{\subsubsection}[hang]{\bfseries}{}{0pt}{}[]
+    \titleformat{\paragraph}[hang]{\it\bfseries}{}{0pt}{}[]
     \titlespacing{\section}{0pt}{8pt}{8pt}
     \titlespacing{\subsection}{0pt}{8pt}{0pt}
     \titlespacing{\subsubsection}{0pt}{8pt}{0pt}
+    \titlespacing{\paragraph}{0pt}{8pt}{0pt}
 }
 
 \fancypagestyle{seminar-booklet-body}{
