--- a/modules/seminar/templates/base.tex
+++ b/modules/seminar/templates/base.tex
@@ -24,6 +24,30 @@
 }
 \savegeometry{main}
 
+\newenvironment{seminar-problem}[3]{%
+    \subsection{%
+        \texorpdfstring{%
+            \bfseries
+            \large #1 \hfill \normalsize%
+            \ifstrempty{#2}{}{#2 bod\PluralMG{#2}}%
+            \ifstrempty{#3}{}{, kategóri\PluralFN{} #3}%
+        }{\arabic{round}.\arabic{problem} #1}%
+    }%
+    \label{\arabic{volume}\arabic{semester}\arabic{round}\arabic{problem}-problem}%
+}{}
+
+\newenvironment{seminar-solution}[4]{%
+    \subsection{%
+        \texorpdfstring{%
+            \bfseries
+            \large #1 \hfill \normalsize%
+            \ifstrempty{#2}{}{vzorák \FormatList{#2}}%
+            \ifstrempty{#3}{}{opravoval#3 \FormatList{#4}}%
+        }{\arabic{round}.\arabic{problem} #1}%
+    }%
+    \label{\arabic{volume}\arabic{semester}\arabic{round}\arabic{problem}-solution}%
+}{}
+
 \fancypagestyle{seminar}{
     \titleformat{\section}[hang]{\centering\LARGE}{}{0pt}{}
     \titleformat{\subsection}[hang]{\large}{\bfseries\arabic{round}.\arabic{problem}}{6pt}{}[]
