--- a/modules/seminar/templates/base-booklets.tex
+++ b/modules/seminar/templates/base-booklets.tex
@@ -28,21 +28,18 @@
     \setcounter{semester}{(* semester.number *)}
     \setcounter{round}{(* round.number *)}
     \setcounter{section}{(* round.number *)}
-
     (@ block inner @)(@ endblock @)
-
     (@ for pid, problem in round.problems.items() @)%
         \setcounter{problem}{(* problem.number *)}%
         \setActive{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/(* round.id *)/(* problem.id *)}%
-
         \subsection{%
             \texorpdfstring{%
                 \large \textbf{(* problem.title *)} \hfill \normalsize%
-                (@ block heading_inner scoped @)(@ endblock heading_inner @)}{(* round.number *).(* problem.number *) (* problem.title *)}%
-            \label{(* volume.id *)(* semester.id *)(* round.id *)(* problem.id *)}%
-        }
-
+                (@ block heading_inner scoped @)(@ endblock heading_inner @)}{(* round.number *).(* problem.number *)}%
+            \label{(* volume.id *)(* semester.id *)(* round.id *)(* problem.id *)-problem}%
+        }%
         (@ block problem_again @)(@ endblock @)
         \protectedInput{\activeDirectory/(* self.kind() *).tex}%
     (@ endfor @)
+
 (@ endblock content @)
