--- a/modules/seminar/templates/problems.tex
+++ b/modules/seminar/templates/problems.tex
@@ -15,10 +15,8 @@
 (@ block heading_inner @)
     (@ if problem.pointsDescription @)%
         \textbf{(* problem.pointsDescription *) bod(* '%s'|format(plural(problem.pointsDescription,"","y","ov")) *)}%
-        (@ if problem.categories @), (@ endif @)%
     (@ endif @)%
     (@ if problem.categories @)%
-        kategóri(@ if problem.categories|length == 1 @)a(@ else @)e(@ endif @) (* problem.categories|format_list *)%
-    (@ endif @)
+        , kategóri(@ if problem.categories|length == 1 @)a(@ else @)e(@ endif @) (* problem.categories|format_list *)%
+    (@ endif @)%
 (@ endblock heading_inner @)
->>>>>>> rework
