--- a/modules/seminar/templates/base-booklets.tex
+++ b/modules/seminar/templates/base-booklets.tex
@@ -29,6 +29,7 @@
     \setcounter{round}{(* round.number *)}
     \setcounter{section}{(* round.number *)}
     (@ block inner @)(@ endblock @)
+
     (@ for pid, problem in round.problems.items() @)%
         \setcounter{problem}{(* problem.number *)}%
         \setActive{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/(* round.id *)/(* problem.id *)}%
@@ -36,7 +37,7 @@
             \texorpdfstring{%
                 \large \textbf{(* problem.title *)} \hfill \normalsize%
                 (@ block heading_inner scoped @)(@ endblock heading_inner @)}{(* round.number *).(* problem.number *)}%
-            \label{(* volume.id *)(* semester.id *)(* round.id *)(* problem.id *)-problem}%
+            \label{(* volume.id *)(* semester.id *)(* round.id *)(* problem.id *)-(* self.kind() *)}%
         }%
         (@ block problem_again @)(@ endblock @)
         \protectedInput{\activeDirectory/(* self.kind() *).tex}%
