Simplified templates, tidied up context functions

--- a/modules/seminar/templates/base-booklets.tex
+++ b/modules/seminar/templates/base-booklets.tex
@@ -10,16 +10,16 @@
 
     \fancyhead[LE,RO]{%
         \textit{%
-            (* self.kind_verbose() *) (* round.number *). kola (* semester.feminine.genitive *)
+            (* kind_verbose|capitalize *) (* round.number *). kola (* semester.feminine.genitive *)
             časti -- termín (* round.deadline.strftime('%d. %m. %Y') *)%
         }%
     }
 
     \section{%
         \texorpdfstring{%
-            (* self.kind_verbose() *) (* round.number *). kola (* semester.feminine.genitive *) časti%
+            (* kind_verbose|capitalize *) (* round.number *). kola (* semester.feminine.genitive *) časti%
         }{%
-            (* self.kind_verbose() *)%
+            (* kind_verbose|capitalize *)%
         }%
     }
     (@ block subtitle @)(@ endblock subtitle @)
@@ -37,10 +37,10 @@
             \texorpdfstring{%
                 \large \textbf{(* problem.title *)} \hfill \normalsize%
                 (@ block heading_inner scoped @)(@ endblock heading_inner @)}{(* round.number *).(* problem.number *)}%
-            \label{(* volume.id *)(* semester.id *)(* round.id *)(* problem.id *)-(* self.kind() *)}%
+            \label{(* volume.id *)(* semester.id *)(* round.id *)(* problem.id *)-(* kind *)}%
         }%
         (@ block problem_again @)(@ endblock @)
-        \protectedInput{\activeDirectory/(* self.kind() *).tex}%
+        \protectedInput{\activeDirectory/(* kind *).tex}%
     (@ endfor @)
 
 (@ endblock content @)
