--- a/modules/seminar/templates/problems.tex
+++ b/modules/seminar/templates/problems.tex
@@ -1,7 +1,7 @@
 (@ extends 'base-booklets.tex' @)
 
-(@ block kind @)problem(@ endblock kind @)
-(@ block kind_verbose @)Zadania(@ endblock kind_verbose @)
+(@ set kind = 'problem' @)
+(@ set kind_verbose = 'zadania' @)
 
 (@ block subtitle @)
     {
@@ -16,13 +16,13 @@
     \begin{seminar-problem}{(* problem.title *)}%
         {(* problem.pointsDescription *)}%
         {(* problem.categories|format_list *)}
-        \protectedInput{\activeDirectory/(* self.kind() *).tex}%
+        \protectedInput{\activeDirectory/(* kind *).tex}%
     \end{seminar-problem}
 (@ endblock problem @)
 
 (@ block heading_inner @)
     (@ if problem.pointsDescription @)%
-        \textbf{(* problem.pointsDescription *) bod(* '%s'|format(plural(problem.pointsDescription,"","y","ov")) *)}%
+        \textbf{(* problem.pointsDescription *) bod(* problem.pointsDescription|plural("","y","ov") *)}%
     (@ endif @)%
     (@ if problem.categories @)%
         , kategóri(* plural(problem.categories|length, "a", "e", "e") *) (* problem.categories|format_list(func=textbf) *)%
