Fixed scholar templates

--- a/modules/scholar/templates/lecture.tex
+++ b/modules/scholar/templates/lecture.tex
@@ -2,7 +2,7 @@
 
 \setActive{\rootDirectory/(* module.id *)/(* course.id *)/(* lecture.id *)}%
 \input{core/i18n/slovak/override.tex}
-\input{input/scholar/(* course.id *)/.static/format-override.tex}
+\input{build/scholar/(* course.id *)/.static/format-override.tex}
 
 \setcounter{secnumdepth}{3}
 
