--- a/modules/scholar/templates/base.tex
+++ b/modules/scholar/templates/base.tex
@@ -1,9 +1,9 @@
 \documentclass[12pt, twoside]{dgs}
 
 \setActive{\rootDirectory/(* module.id *)/(* course.id *)/(* year.id *)/(* self.typedir() *)/(* issue.id *)/}%
-\input{core/i18n/slovak/override.tex}
+\input{core/i18n/sk/override.tex}
 
-\input{input/scholar/(* course.id *)/.static/format-override.tex}
+\input{build/scholar/(* course.id *)/.static/format-override.tex}
 
 \setcounter{secnumdepth}{3}
 
