--- a/modules/seminar/templates/base-booklets.tex
+++ b/modules/seminar/templates/base-booklets.tex
@@ -36,7 +36,7 @@
         \subsection{%
             \texorpdfstring{%
                 \large \textbf{(* problem.title *)} \hfill \normalsize%
-                (@ block heading_inner scoped @)(@ endblock heading_inner @)}{(* round.number *).(* problem.number *)}%
+                (@ block heading_inner scoped @)(@ endblock heading_inner @)}{(* round.number *).(* problem.number *) (* problem.title *)}%
             \label{(* volume.id *)(* semester.id *)(* round.id *)(* problem.id *)-(* kind *)}%
         }%
         (@ block problem_again @)(@ endblock @)
