Fixes for scholar, blocked ulem default behaviour

--- a/core/tex/dgs.cls
+++ b/core/tex/dgs.cls
@@ -53,7 +53,7 @@
 \RequirePackage{chngcntr}
 \RequirePackage{mathtools}
 \RequirePackage{physics}
-\RequirePackage{ulem}
+\RequirePackage[normalem]{ulem}
 \RequirePackage[weather]{ifsym}
 \RequirePackage{nth}
 \RequirePackage{fancyvrb}                                   % fancy verbatim (currently unused)
