--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -33,6 +33,7 @@
 \DeclareSIUnit{\parsec}{pc}
 \DeclareSIUnit{\pixel}{px}
 \DeclareSIUnit{\eur}{€}
+\DeclareSIUnit{\mag}{\!\ensuremath{^\mathrm{m}}}
 \DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\Sun}}
 \DeclareSIUnit{\solarluminosity}{\ensuremath{\mathrm{L}_\Sun}}
 \DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_\Earth}}
