--- a/modules/scholar/templates/base.tex
+++ b/modules/scholar/templates/base.tex
@@ -11,7 +11,7 @@
 
 \fancypagestyle{scholar}{
     \fancyhf{}
-    \fancyhead[C]{\textit{(* course.name *)}}
+    \fancyhead[C]{\textit{(* course.title *)}}
     \fancyfoot[C]{\small \thepage/\pageref*{LastPage}}
 
     \titleformat{\section}[block]{\Huge\bfseries\centering}{\Roman{section}. }{0pt}{}
