Better cross-references, fixed pandoc call

--- a/modules/scholar/templates/base.tex
+++ b/modules/scholar/templates/base.tex
@@ -28,6 +28,7 @@
 
 \numberwithin{equation}{subsection}
 \numberwithin{figure}{subsection}
+\renewcommand\thesubsubsection{\thesubsection\alph{subsubsection}}
 
 (@ block style @)(@ endblock @)
 
