More tests, schemas

--- a/modules/seminar/templates/base.tex
+++ b/modules/seminar/templates/base.tex
@@ -69,7 +69,7 @@
     }
     \fancyhead[LE,RO]{\textit{(* competition.full.nominative *)}}
     \fancyfoot[LO,RE]{\href{mailto:(* competition.email *)}{\texttt{(* competition.email *)}}}
-    \fancyfoot[LE,RO]{\URL{(* competition.URL *)}}
+    \fancyfoot[LE,RO]{\URL{(* competition.urls.web *)}}
 }
 
 \fancypagestyle{seminar-booklet-rules}{%
@@ -108,7 +108,7 @@
         \end{minipage}
     }
     \fancyfoot[LO,RE]{\href{mailto:(* competition.email *)}{\texttt{(* competition.email *)}}}
-    \fancyfoot[LE,RO]{\URL{(* competition.URL *)}}
+    \fancyfoot[LE,RO]{\URL{(* competition.urls,web *)}}
 }
 
 \numberwithin{equation}{subsection}
