--- a/modules/seminar/templates/solutions.tex
+++ b/modules/seminar/templates/solutions.tex
@@ -5,9 +5,9 @@
 
 (@ block heading_inner @)
     (@ if problem.solution @)%
-        vzorák (* problem.solution|format_person(func=textbf) *)%
+        vzorák (* problem.solution|format_people(func=textbf) *)%
     (@ endif @)%
     (@ if problem.evaluation @)%
-        opravoval(* problem.evaluation|format_gender_suffix *) (* problem.evaluation|format_person(func=textbf) *)%
+        opravoval(* problem.evaluation|format_gender_suffix *) (* problem.evaluation|format_people(func=textbf) *)%
     (@ endif @)%
 (@ endblock heading_inner @)
