--- a/modules/seminar/templates/solutions.tex
+++ b/modules/seminar/templates/solutions.tex
@@ -8,6 +8,6 @@
         vzorák (* problem.solution|format_people(func=textbf) *)%
     (@ endif @)%
     (@ if problem.evaluation @)%
-        opravoval(* problem.evaluation|format_gender_suffix *) (* problem.evaluation|format_people(func=textbf) *)%
+        , opravoval(* problem.evaluation|format_gender_suffix *) (* problem.evaluation|format_people(func=textbf) *)%
     (@ endif @)%
 (@ endblock heading_inner @)
