--- a/modules/seminar/templates/base-booklets.tex
+++ b/modules/seminar/templates/base-booklets.tex
@@ -30,7 +30,7 @@
     \setcounter{section}{(* round.number *)}
     (@ block inner @)(@ endblock @)
 
-    (@ for pid, problem in round.problems.items() @)%
+    (@ for problem in round.problems @)%
         \setcounter{problem}{(* problem.number *)}%
         \setActive{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/(* round.id *)/(* problem.id *)}%
         \subsection{%
