Finishing the context rework

--- a/modules/scholar/templates/handout-students.tex
+++ b/modules/scholar/templates/handout-students.tex
@@ -8,5 +8,6 @@
             \protectedInput{\activeDirectory/(* problem.id *)/problem.tex}
             (@ block solution scoped @)(@ endblock solution @)
         (@ endfor @)
+        (@ block solutions scoped @)(@ endblock solutions @)
     (@ endif @)
 (@ endblock problems @)
