--- a/modules/scholar/templates/base.tex
+++ b/modules/scholar/templates/base.tex
@@ -14,7 +14,7 @@
     \fancyhead[C]{\textit{(* course.title *)}}
     \fancyfoot[C]{\small \thepage/\pageref*{LastPage}}
 
-    \titleformat{\section}[block]{\Huge\bfseries\centering}{\Roman{section}. }{0pt}{}
+    \titleformat{\section}[block]{\vspace*{-10mm}\Huge\bfseries\centering}{\Roman{section}. }{0pt}{}
     \titleformat{\subsection}[hang]{\LARGE\bfseries\vspace{4mm}\vspace*{-4mm}}{}{0pt}{}
     \titleformat{\subsubsection}[hang]{\large\bfseries}{}{0pt}{}[]
     \titleformat{\paragraph}[hang]{\bfseries}{}{0pt}{}[]
