Fixed typo in template

--- a/modules/seminar/templates/base.tex
+++ b/modules/seminar/templates/base.tex
@@ -108,7 +108,7 @@
         \end{minipage}
     }
     \fancyfoot[LO,RE]{\href{mailto:(* competition.email *)}{\texttt{(* competition.email *)}}}
-    \fancyfoot[LE,RO]{\URL{(* competition.urls,web *)}}
+    \fancyfoot[LE,RO]{\URL{(* competition.urls.web *)}}
 }
 
 \numberwithin{equation}{subsection}
