--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -66,7 +66,7 @@
     \IfNoValueTF{#2}{%
         \frac@{#3}{#3#5}\left(#4\right)%
     }{%
-        \frac@{#3^{#2}}{#3#5^{#2}}\left(#4\right)%
+        \frac@{#3^{#2}}{#3{#5}^{#2}}\left(#4\right)%
     }%
 }
 
@@ -210,7 +210,7 @@
 
 \NewDocumentCommand{\ArrowVector}{m}{\vv{#1}}
 \NewDocumentCommand{\LongVector}{m}{\overrightarrow{#1}}
-\NewDocumentCommand{\BoldVector}{m}{\mathbfit{#1}}
+\NewDocumentCommand{\BoldVector}{m}{\boldsymbol{#1}}
 \NewDocumentCommand{\UnitVector}{m}{\hat{\vec{#1}}}
 \NewDocumentCommand{\UnitBoldVector}{m}{\hat{\BoldVector{#1}}}
 \NewDocumentCommand{\UnitArrowVector}{m}{\hat{#1}}
