--- a/modules/seminar/templates/instagram.tex
+++ b/modules/seminar/templates/instagram.tex
@@ -42,9 +42,9 @@
 (@ block content @)
     \pagestyle{empty}
     \setInstagramLayout
-    \color{(* round.instagram.textColour *)}
+    \color{(* round.instagram.text_colour *)}
     \makeatletter
-        \color{(* round.instagram.textColour *)}\global\let\default@color\current@color
+        \color{(* round.instagram.text_colour *)}\global\let\default@color\current@color
     \makeatother
 
     \setcounter{volume}{(* volume.number *)}
