--- a/core/tex/fonts.tex
+++ b/core/tex/fonts.tex
@@ -45,3 +45,11 @@
 \DeclareFontFamily{U}{skulls}{}
 \DeclareFontShape{U}{skulls}{m}{n}{ <-> skull }{}
 \newcommand{\skull}{\text{\usefont{U}{skulls}{m}{n}\symbol{'101}}}
+
+\lstset{%
+    basicstyle=\ttfamily\footnotesize,%
+    breaklines=true,%
+    inputencoding=utf8,%
+    extendedchars=true,%
+    texcl=true,
+}
