Tidied up fonts

--- a/core/tex/fonts.tex
+++ b/core/tex/fonts.tex
@@ -33,7 +33,7 @@
 ]{UbuntuMono}
 
 \setsansfont[
-    Path            = assets/fonts/ ,
+    Path            = assets/fonts/Verdana/ ,
     Scale           = 0.9,
     Extension       = .ttf ,
     UprightFont     = *-r ,
